<resources>
    <string name="app_name">Car Price</string>
    <string name="select_make">Select Make</string>
    <string name="select_model">Select Model</string>
    <string name="select_submodel">Select Submodel</string>
    <string name="select_year">Select Year</string>
    <string name="all_models">All Models</string>
    <string name="all_submodels">All Submodels</string>
    <string name="select_car">Select Car</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="submodel">Sub:</string>
    <string name="year">Year:</string>
    <string name="all">All</string>
    <string name="another_car">Another car</string>
    <string name="estimated_price">Market Listing Estimate</string>
    <string name="no_data">¯\\_(ツ)_/¯</string>
    <string name="connection_error">Please check your internet connection.</string>
    <string name="unknown_error">Something went wrong. Try again later.</string>
</resources>