<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/splash">

    <fragment
        android:id="@+id/splash"
        android:name="org.sdelaysam.carprice.ui.splash.SplashFragment"
        android:label=""
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/start"
        android:name="org.sdelaysam.carprice.ui.start.StartFragment"
        android:label=""
        tools:layout="@layout/fragment_start" />

    <fragment
        android:id="@+id/price"
        android:name="org.sdelaysam.carprice.ui.price.PriceFragment"
        android:label=""
        tools:layout="@layout/fragment_price" />

    <fragment
        android:id="@+id/makeList"
        android:name="org.sdelaysam.carprice.ui.make.MakeListFragment"
        android:label="@string/select_make"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/modelList"
        android:name="org.sdelaysam.carprice.ui.model.ModelListFragment"
        android:label="@string/select_model"
        tools:layout="@layout/fragment_list">
        <argument
            android:name="makeId"
            app:argType="string"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/subModelList"
        android:name="org.sdelaysam.carprice.ui.submodel.SubModelListFragment"
        android:label="@string/select_submodel"
        tools:layout="@layout/fragment_list">
        <argument
            android:name="makeId"
            app:argType="string"
            app:nullable="false" />
        <argument
            android:name="modelId"
            app:argType="string"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/yearList"
        android:name="org.sdelaysam.carprice.ui.year.YearListFragment"
        android:label="@string/select_year"
        tools:layout="@layout/fragment_list" />

    <action
        android:id="@+id/splashToStart"
        app:destination="@id/start"
        app:popUpTo="@id/splash"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/splashToPrice"
        app:destination="@id/price"
        app:popUpTo="@id/splash"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/openStart"
        app:destination="@id/start"
        app:popUpTo="@id/price"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/openPrice"
        app:destination="@id/price"
        app:launchSingleTop="true" />

    <action
        android:id="@+id/openMakeList"
        app:destination="@id/makeList" />

    <action
        android:id="@+id/openModelsList"
        app:destination="@id/modelList" />

    <action
        android:id="@+id/openSubModelsList"
        app:destination="@id/subModelList" />

    <action
        android:id="@+id/openYearList"
        app:destination="@id/yearList" />

</navigation>