<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <View
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_price_rect"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toEndOf="@id/v_guideline"
        app:layout_constraintStart_toStartOf="@id/v_guideline"
        app:layout_constraintTop_toTopOf="@id/h_guideline"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_half"
        android:text="@string/estimated_price"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="?attr/colorOnPrimarySurface"
        app:layout_constraintBottom_toTopOf="@id/price"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="?attr/colorOnPrimarySurface"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toStartOf="@id/currency"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/price_label"
        tools:text="12,345" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4sp"
        android:layout_marginTop="8sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?attr/colorOnPrimarySurface"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"
        tools:text="KWD" />

    <TextView
        android:id="@+id/make_label"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/max_margin"
        android:layout_marginEnd="@dimen/default_margin_half"
        android:text="@string/make"
        app:layout_constraintEnd_toStartOf="@id/v_guideline"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/make_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        android:gravity="center_vertical|start"
        app:layout_constraintBottom_toBottomOf="@id/make_label"
        app:layout_constraintStart_toEndOf="@id/v_guideline"
        app:layout_constraintTop_toTopOf="@id/make_label"
        tools:text="BMW" />

    <TextView
        android:id="@+id/model_label"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/model"
        app:layout_constraintEnd_toEndOf="@id/make_label"
        app:layout_constraintTop_toBottomOf="@id/make_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/model_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        app:layout_constraintBottom_toBottomOf="@id/model_label"
        app:layout_constraintStart_toStartOf="@id/make_button"
        app:layout_constraintTop_toTopOf="@id/model_label"
        tools:text="M5" />

    <TextView
        android:id="@+id/submodel_label"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/submodel"
        app:layout_constraintEnd_toEndOf="@id/model_label"
        app:layout_constraintTop_toBottomOf="@id/model_label"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submodel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        app:layout_constraintBottom_toBottomOf="@id/submodel_label"
        app:layout_constraintStart_toStartOf="@id/model_button"
        app:layout_constraintTop_toTopOf="@id/submodel_label"
        tools:text="ALL"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/year_label"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/year"
        app:layout_constraintEnd_toEndOf="@id/submodel_label"
        app:layout_constraintTop_toBottomOf="@id/submodel_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/year_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        app:layout_constraintBottom_toBottomOf="@id/year_label"
        app:layout_constraintStart_toStartOf="@id/model_button"
        app:layout_constraintTop_toTopOf="@id/year_label"
        tools:text="2020" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/another_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>